crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_block_comment_between_clauses.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) /* only active */ WHERE n.active = true RETURN n\")"
---
MATCH (n:Person) /* only active */
WHERE n.active = TRUE
RETURN n
