crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_anonymous_nodes.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (:Person)-[:KNOWS]->(:Person)-[:LIKES]->(m:Movie) RETURN m.title\")"
---
MATCH (:Person)-[:KNOWS]->(:Person)-[:LIKES]->(m:Movie)
RETURN m.title
