crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_left_direction.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Movie)<-[r:ACTED_IN]-(b:Person) RETURN a.title, b.name\")"
---
MATCH (a:Movie)<-[r:ACTED_IN]-(b:Person)
RETURN a.title, b.name
