crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_mixed_directions.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (a)-[r1]->(b)<-[r2]-(c) RETURN a, b, c\")"
---
MATCH (a)-[r1]->(b)<-[r2]-(c)
RETURN a, b, c
