crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_multiple_labels.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person:Employee) RETURN n.name\")"
---
MATCH (n:Person:Employee)
RETURN n.name
