crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_node_with_props.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Alice', age: 30}) RETURN n\")"
---
MATCH (n:Person {name: 'Alice', age: 30})
RETURN n
