crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_rel_with_props.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (a)-[r:KNOWS {since: 2020}]->(b) RETURN a, b, r.since\")"
---
MATCH (a)-[r:KNOWS {since: 2020}]->(b)
RETURN a, b, r.since
