crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_chain_variable_length.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Person)-[r:KNOWS*1..3]->(b:Person) RETURN a.name, b.name\")"
---
MATCH (a:Person)-[r:KNOWS*1..3]->(b:Person)
RETURN a.name, b.name
